--- a/dreamswim/_posts/2014-09-23-services-3.markdown
+++ b/dreamswim/_posts/2014-09-23-services-3.markdown
@@ -1,8 +1,8 @@
 ---
 layout: default
-img: phones.png
+img: goggles.png
 category: Services
-title: Google Web Fonts and<br>Font Awesome Icons
+title: Rent Equipment
 description: |
 ---
-This template features the 'Lato' font, part of the [Google Web Font library](http://www.google.com/fonts), as well as [icons from Font Awesome](http://fontawesome.io).
+  We deliver your swimming equipment right to you so you don't have to lug your bag around, heavy and soaked with water.
