--- a/dreamswim/_posts/2014-09-21-services-1.markdown
+++ b/dreamswim/_posts/2014-09-21-services-1.markdown
@@ -1,8 +1,7 @@
 ---
 layout: default
-img: ipad.png
+img: pool.jpg
 category: Services
-title: Death to the Stock Photo:<br>Special Thanks
+title: Find the right places to swim for you.
 description: |
 ---
-  A special thanks to [Death to the Stock Photo](http://join.deathtothestockphoto.com/) for providing the photographs that you see in this template.  Visit their website to become a member!
