--- a/dreamswim/_posts/2014-09-22-services-2.markdown
+++ b/dreamswim/_posts/2014-09-22-services-2.markdown
@@ -1,10 +1,8 @@
 ---
 layout: default
-img: dog.png
+img: nightswim.jpg
 category: Services
-title: 3D Device Mockups<br>by PSDCovers
+title: Discover new swimming experiences.
 description: |
 ---
-  Turn your 2D designs into high quality, 3D
-  product shots in seconds using free Photoshop actions by [PSDCovers](http://www.psdcovers.com/)! Visit
-  their website to download some of their awesome, free photoshop actions!
+  Fancy a night dip in the pool? We will dim the lights and play a killer soundtrack for you to jump right in.
